Fix tick marks not aligned center

--- a/src/scss/components/input-variant-checkbox.scss
+++ b/src/scss/components/input-variant-checkbox.scss
@@ -8,6 +8,7 @@
             user-select: none;
             padding-left: 12px !important;
             padding-right: 12px;
+            height: auto;
     
             &::before {
                 height: 24px;
